--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,7 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
+  <build>
+    <finalName>java-jenkins-docker</finalName>
+  </build>
 </project>
